🚸 (fixed): fixed mobile overflow issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,7 +28,3 @@
   text-align: center;
 }
 
-.main-wrapper{
-  display: flex;
-  flex-direction: column;
-}
