--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -38,8 +38,11 @@
  }
 
  .main {
-   flex: 1;
-   align-items: center;
-   display: flex;
-   justify-content: center;
- }
+  padding: 2rem 0;
+}
+
+@media(min-width:768px){
+  .main {
+    padding: 4rem 0;
+  }
+}
